# Discord-Guardian

./: .gitignore  README.md  blueprint.md  pyproject.toml  requirements.txt  run.py
src/guardian/: config.py  firestore_store.py  gemini_client.py  main.py  roles.py
